# aria

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
examples/: analyze_file_demo.py
scripts/: evaluate_model.py  migrate_person_names.py  reset_archive.py  setup_gmail.py  test_ollama.py  view_document_text.py
src/aria/: __init__.py  config.py  logging.py  main.py
src/aria/agent/: __init__.py  core.py  executor.py  planner.py  prompts.py
src/aria/approval/: __init__.py  classifier.py  handler.py
src/aria/llm/: __init__.py  client.py  models.py  tools.py
src/aria/memory/: __init__.py  archive.py  chunker.py  context.py  conversation.py  embeddings.py  exceptions.py  indexer.py  ingestion.py  models.py  schema.sql  vectors.py
src/aria/tools/: __init__.py  base.py  registry.py
src/aria/tools/documents/: __init__.py  classifier.py  models.py  ocr.py  pdf_extractor.py  process_document.py  process_inbox.py  processor.py  prompts.py  qa.py  tools.py
src/aria/tools/email/: __init__.py  auth.py  cache.py  client.py  models.py  tools.py
src/aria/tools/examples/: __init__.py  echo.py  system_info.py
src/aria/tools/filesystem/: __init__.py  analyze_directory.py  analyze_file.py  copy_file.py  create_directory.py  delete_file.py  list_directory.py  move_file.py  organize_files.py  read_file.py
src/aria/tools/organization/: __init__.py  list_logs.py  log_manager.py  undo.py
src/aria/tools/scanner/: __init__.py  scan_and_index.py  search_archive.py
src/aria/tools/search/: __init__.py  client.py  fetcher.py  models.py  web.py
src/aria/ui/: __init__.py  console.py  formatters.py  prompts.py
tests/: conftest.py  test_config.py
tests/integration/: __init__.py  test_agent_with_history.py  test_file_organization.py  test_history_commands.py
tests/test_agent/: test_executor.py  test_planner.py
tests/test_approval/: test_classifier.py  test_handler.py
tests/test_llm/: test_models.py  test_tools.py
tests/test_memory/: __init__.py  conftest.py  test_chunker.py  test_conversation.py  test_embeddings.py  test_indexer.py  test_ingestion.py  test_vectors.py
tests/test_tools/: test_base.py  test_email_auth.py  test_examples.py  test_registry.py
tests/test_tools/test_documents/: test_classifier.py  test_models.py  test_processor.py
tests/test_tools/test_email/: __init__.py  test_email_tools.py
tests/test_tools/test_filesystem/: test_analyze_directory.py  test_analyze_file.py  test_create_directory.py  test_file_operations.py  test_list_directory.py  test_organize_files.py
tests/test_tools/test_organization/: __init__.py  test_integration.py  test_log_manager.py  test_tools.py
tests/test_tools/test_search/: __init__.py  test_web_search.py
tests/test_ui/: __init__.py  test_formatters.py
