[project]
name = "aria"
version = "0.1.0"
description = "AI Research & Intelligence Assistant - A local-first agentic AI personal assistant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Amir" }
]
keywords = ["ai", "assistant", "agent", "local", "llm"]

dependencies = [
    # Core
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "rich>=13.9",
    "structlog>=24.4",
    "click>=8.1",              # CLI framework (works great with Rich)
    "python-dotenv>=1.0",
    "tenacity>=9.0",           # Retry logic for API calls
    # Database & Storage
    "aiosqlite>=0.20",         # Async SQLite for conversation history
    "chromadb>=0.5",           # Vector store for semantic search
    # Gmail Integration
    "google-api-python-client>=2.154",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    # Document Processing & OCR
    "surya-ocr>=0.6",          # OCR with GPU acceleration for scanned documents
    "pdf2image>=1.17",         # Convert PDF pages to images for OCR
    "Pillow>=10.2,<11.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "ddgs>=9.9.3",
    "sentence-transformers>=5.2.0",
    "pymupdf>=1.26.7",
]

[project.optional-dependencies]
# PDF processing - install when needed: uv add aria[pdf]
pdf = [
    "marker-pdf>=1.0",         # Alternative: switch to mineru or docling
]

# Voice/TTS - install when needed: uv add aria[voice]  
voice = [
    "kokoro>=0.1",             # Fast TTS for interactive mode
]

# All optional features
all = [
    "aria[pdf]",
    "aria[voice]",
]

[project.scripts]
# CLI entry point - run with: uv run aria
aria = "aria.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",               # Linting + formatting (replaces black, isort, flake8)
    "mypy>=1.13",              # Type checking
    "pre-commit>=4.0",         # Git hooks
    "ipython>=8.30",           # Better REPL for debugging
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aria"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["aria"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "google.*",
    "googleapiclient.*",
    "surya.*",
    "pdf2image.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",                     # Show extra test summary
    "--strict-markers",        # Error on unknown markers
    "--strict-config",         # Error on config issues
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]

[tool.coverage.run]
source = ["src/aria"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
